--- a/KingPlatform/Views/Home/Index.cshtml
+++ b/KingPlatform/Views/Home/Index.cshtml
@@ -46,21 +46,12 @@
                             </li>
                             <li class="dropdown hidden-xs">
                                 <a class="btn dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-tasks"></i>
-                                    <span class="count">5</span>
-                                </a>
-                            </li>
-                            <li class="dropdown hidden-xs">
-                                <a class="btn dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-bell"></i>
-                                    <span class="count">8</span>
                                 </a>
                             </li>
-
                             <li class="dropdown hidden-xs">
                                 <a class="btn dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-envelope-o"></i>
-                                    <span class="count">16</span>
                                 </a>
                             </li>
                             <li class="dropdown profile-dropdown">
@@ -153,12 +144,53 @@
     <script type="text/javascript" src="~/Content/js/index.js"></script>
     <script type="text/javascript" src="~/Content/js/indextab.js"></script>
     <script>
-        function newIframe(strHref) {
-            $('.menuItem').each(function () {
+        function newIframe(dataId, dataHref, dataName) {
+            $("#header-nav>ul>li.open").removeClass("open");
+            var dataId = dataId;
+            if (dataId != "") {
+                top.$.cookie('King_currentmoduleid', dataId, { path: "/" });
+            }
+            var dataUrl = dataHref;
+            var menuName = dataName;
+            var flag = true;
+            if (dataUrl == undefined || $.trim(dataUrl).length == 0) {
+                return false;
+            }
+            $('.menuTab').each(function () {
+                if ($(this).data('id') == dataId) {
+                    if (!$(this).hasClass('active')) {
+                        $(this).addClass('active').siblings('.menuTab').removeClass('active');
+                        $.Kingtab.scrollToTab(this);
+                        $('.mainContent .King_iframe').each(function () {
+                            if ($(this).data('id') == dataId) {
+                                $(this).show().siblings('.King_iframe').hide();
+                                return false;
+                            }
+                        });
+                    }
+                    flag = false;
+                    return false;
+                }
+            });
+            if (flag) {
+                var str = '<a href="javascript:;" class="active menuTab" data-id="' + dataId + '">' + menuName + ' <i class="fa fa-remove"></i></a>';
+                $('.menuTab').removeClass('active');
+                var str1 = '<iframe class="King_iframe" id="iframe' + dataId + '" name="iframe' + dataId + '"  width="100%" height="100%" src="' + dataUrl + '" frameborder="0" data-id="' + dataId + '" seamless></iframe>';
+                $('.mainContent').find('iframe.King_iframe').hide();
+                $('.mainContent').append(str1);
+                $.loading(true);
+                $('.mainContent iframe:visible').load(function () {
+                    $.loading(false);
+                });
+                $('.menuTabs .page-tabs-content').append(str);
+                $.Kingtab.scrollToTab($('.menuTab.active'));
+            }
+            return false;
+            /*$('.menuItem').each(function () {
                 if ($(this).attr("href") == strHref) {
                     $(this).click();
                 }
-            });
+            });*/
         }
     </script>
     @*<script type="text/javascript" src="~/Content/js/loading/pace.min.js"></script>*@
