--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
@@ -11,8 +11,31 @@
             async: false,
             success: function (data) {
                 $('#ajax-loader').fadeOut();
-                $("#form1").formSerialize(data);
-                $("#form1").find('.form-control,input').attr('readonly', 'readonly');
+                $("#newOrderQuantity").html(data.newOrderQuantity);                                                         //新订单
+                $("#changedOrderQuantity").html(data.changedOrderQuantity);                                                 //内容变更通知
+                $("#cancelOrderQuantity").html(data.cancelOrderQuantity);                                                   //订单取消通知
+                $("#deliveryTimeChangedOrderQuantity").html(data.deliveryTimeChangedOrderQuantity);                         //订单交期修改
+                $("#cancelledToConfirmedOrderQuantity").html(data.cancelledToConfirmedOrderQuantity);                       //订单取消确认
+                $("#deliveryTimeChangedPendingOrderQuantity").html(data.deliveryTimeChangedPendingOrderQuantity);           //待华为确认交期更改
+                $("#vendorApplyQtyChangeOrderQuantity").html(data.vendorApplyQtyChangeOrderQuantity);                       //待华为确认数量变更
+                $("#vendorApplyCancelOrderQuantity").html(data.vendorApplyCancelOrderQuantity);                             //待华为确认取消
+                $("#rmaBarterOrderQuantity").html(data.rmaBarterOrderQuantity);                                             //RMA换货订单
+                $("#noacceptedPO").html(data.newOrderQuantity + data.changedOrderQuantity + data.cancelOrderQuantity + data.deliveryTimeChangedOrderQuantity + data.cancelledToConfirmedOrderQuantity + data.deliveryTimeChangedPendingOrderQuantity + data.vendorApplyQtyChangeOrderQuantity + data.vendorApplyCancelOrderQuantity + data.rmaBarterOrderQuantity)  //待接收数量
+
+                $("#intransitOrderQuantity").html(data.intransitOrderQuantity);                                             //在途订单
+                $("#cancelledOrderQuantity").html(data.cancelledOrderQuantity);                                             //订单已取消
+                $("#closedOrderQuantity").html(data.closedOrderQuantity);                                                   //订单已关闭
+                $("#acceptedPO").html(data.intransitOrderQuantity + data.cancelledOrderQuantity + data.closedOrderQuantity);    //已接受PO数量
+
+                $("#expiredOrderQuantity").html(data.expiredOrderQuantity);                                                 //新订单超三天未处理
+                $("#arrivalOnWeekOrderQuantity").html(data.arrivalOnWeekOrderQuantity);                                     //预计两周内到货
+                $("#nonDeliveryOrderQuantity").html(data.nonDeliveryOrderQuantity);                                         //下单六个月未交货
+                $("#overdueOrderQuantity").html(data.overdueOrderQuantity);                                                 //过期订单
+                $("#warningPO").html(data.expiredOrderQuantity + data.arrivalOnWeekOrderQuantity + data.nonDeliveryOrderQuantity + data.overdueOrderQuantity)                                                                                //预警PO数量
+
+                console.log(data);
+                //$("#form1").formSerialize(data);
+                //$("#form1").find('.form-control,input').attr('readonly', 'readonly');
             }
         });
         $("a").click(function () {
@@ -27,74 +50,130 @@
     <img src="~/Content/img/ajax-loader.gif" />
 </div>
 <form id="form1">
-    <div style="margin-top: 10px; margin-left: 10px; margin-right: 10px;">
-        <table class="table">
+    <div >
+        <table class="table table-bordered " style="background-color:#fff;">
             <tr>
-                <th class="col-md-4">状态</th>
-                <th class="col-md-4">数量</th>
-                <th class="col-md-4 text-center">处理</th>
-            </tr>
-            <tr>
-                <th class="col-md-4">新订单</th>
-                <td class="col-md-4">
-                    <input id="newOrderQuantity" name="newOrderQuantity" type="text" class="form-control" />
+                <td class="col-md-4" style="padding:0px;border-top:2px solid #00a5ff">
+                    <table class="table table-hover">
+                        <tr style="height:60px;font-size:16px;background-color:#e4edff;color:#00a5ff;">
+                            <td class="col-md-6" style="padding-top:18px;padding-left:20px;">待接受</td>
+                            <td class="col-md-6" style="padding-top:18px;padding-left:20px;"><span id="noacceptedPO" class="POboardTotalnum">0</span></td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">新订单</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="newOrderQuantity" class="POboardnum" name="newOrderQuantity" href="javascript:void()" data-name="新PO列表" data-id="2bcb1fef-78f4-4a44-a0b8-4a0355d78a7a" data-href="/HuaweiOrderManage/FindPOList/News">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">内容变更通知</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="changedOrderQuantity" class="POboardnum" name="changedOrderQuantity" href="javascript:void()" data-name="变更PO列表" data-id="d26d8152-3441-42fe-ac9e-d2c08201685d" data-href="/HuaweiOrderManage/FindPOList/Change">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">订单取消通知</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="cancelOrderQuantity" class="POboardnum" name="cancelOrderQuantity" href="javascript:void()" data-name="取消PO列表" data-id="b7eb5f85-4890-41d0-a59a-1570f7f6cfb9" data-href="/HuaweiOrderManage/FindPOList/Cancel">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">订单交期修改</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="deliveryTimeChangedOrderQuantity" class="POboardnum" name="deliveryTimeChangedOrderQuantity" href="javascript:void()" data-name="" data-id="" data-href="">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">订单取消确认</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="cancelledToConfirmedOrderQuantity" class="POboardnum" name="cancelledToConfirmedOrderQuantity" href="javascript:void()" data-name="" data-id="" data-href="">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">待华为确认交期更改</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="deliveryTimeChangedPendingOrderQuantity" class="POboardnum" name="deliveryTimeChangedPendingOrderQuantity" href="javascript:void()" data-name="" data-id="" data-href="">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">待华为确认数量变更</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="vendorApplyQtyChangeOrderQuantity" class="POboardnum" name="vendorApplyQtyChangeOrderQuantity" href="javascript:void()" data-name="" data-id="" data-href="">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">待华为确认取消</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="vendorApplyCancelOrderQuantity" class="POboardnum" name="vendorApplyCancelOrderQuantity" href="javascript:void()" data-name="" data-id="" data-href="">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">RMA换货订单</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="rmaBarterOrderQuantity" class="POboardnum" name="rmaBarterOrderQuantity" href="javascript:void()" data-name="" data-id="" data-href="">0</a>
+                            </td>
+                        </tr>
+                    </table>
                 </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="新PO列表" data-id="2bcb1fef-78f4-4a44-a0b8-4a0355d78a7a" data-href="/HuaweiOrderManage/FindPOList/News">查看</a>
+                <td class="col-md-4" style="padding:0px;border-top:2px solid #46cccd">
+                    <table class="table table-hover">
+                        <tr style="height:60px;font-size:16px;background-color:#d7f0f4;color:#46cccd;">
+                            <td class="col-md-6" style="padding-top:18px;padding-left:20px;">已接受</td>
+                            <td class="col-md-6" style="padding-top:18px;padding-left:20px;"><span id="acceptedPO" class="POboardTotalnum">0</span></td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">在途订单</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="intransitOrderQuantity" class="POboardnum" name="intransitOrderQuantity" href="javascript:void()" data-name="在途PO列表" data-id="cbbf8982-92f5-472b-ab2c-ac151d203860" data-href="/HuaweiOrderManage/FindPOList/Onway">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">订单已取消</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="cancelledOrderQuantity" class="POboardnum" name="cancelledOrderQuantity" href="javascript:void()" data-name="订单已取消" data-id="d26d8152-3441-42fe-ac9e-d2c08201685d" data-href="/HuaweiOrderManage/FindPOList/Change">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">订单已关闭</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="closedOrderQuantity" class="POboardnum" name="closedOrderQuantity" href="javascript:void()" data-name="订单已关闭" data-id="b7eb5f85-4890-41d0-a59a-1570f7f6cfb9" data-href="/HuaweiOrderManage/FindPOList/Cancel">0</a>
+                            </td>
+                        </tr>
+
+                    </table>
                 </td>
-            </tr>
-            <tr>
-                <th class="col-md-4">华为订单取消</th>
-                <td class="col-md-4">
-                    <input id="cancelOrderQuantity" name="cancelOrderQuantity" type="text" class="form-control" />
-                </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="取消PO列表" data-id="b7eb5f85-4890-41d0-a59a-1570f7f6cfb9" data-href="/HuaweiOrderManage/FindPOList/Cancel">查看</a>
-                </td>
-            </tr>
-            <tr>
-                <th class="col-md-4">华为订单变更</th>
-                <td class="col-md-4">
-                    <input id="changedOrderQuantity" name="changedOrderQuantity" type="text" class="form-control" />
-                </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="变更PO列表" data-id="d26d8152-3441-42fe-ac9e-d2c08201685d" data-href="/HuaweiOrderManage/FindPOList/Change">查看</a>
-                </td>
-            </tr>
-            <tr>
-                <th class="col-md-4">在途订单</th>
-                <td class="col-md-4">
-                    <input id="intransitOrderQuantity" name="intransitOrderQuantity" type="text" class="form-control" />
-                </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="在途PO列表" data-id="cbbf8982-92f5-472b-ab2c-ac151d203860" data-href="/HuaweiOrderManage/FindPOList/Onway">查看</a>
-                </td>
-            </tr>
-            <tr>
-                <th class="col-md-4">过期订单</th>
-                <td class="col-md-4">
-                    <input id="overdueOrderQuantity" name="overdueOrderQuantity" type="text" class="form-control" />
-                </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="预警PO列表" data-id="0daf345b-8519-4a1d-acb5-a17406ed235c" data-href="/HuaweiOrderManage/FindPOList/Warning">查看</a>
-                </td>
-            </tr>
-            <tr>
-                <th class="col-md-4">新订单超三天未处理</th>
-                <td class="col-md-4">
-                    <input id="expiredOrderQuantity" name="expiredOrderQuantity" type="text" class="form-control" />
-                </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="预警PO列表" data-id="0daf345b-8519-4a1d-acb5-a17406ed235c" data-href="/HuaweiOrderManage/FindPOList/Warning">查看</a>
-                </td>
-            </tr>
-            <tr>
-                <th class="col-md-4">下单六个月未交货</th>
-                <td class="col-md-4">
-                    <input id="nonDeliveryOrderQuantity" name="nonDeliveryOrderQuantity" type="text" class="form-control" />
-                </td>
-                <td class="col-md-4 text-center">
-                    <a href="javascript:void()" data-name="预警PO列表" data-id="0daf345b-8519-4a1d-acb5-a17406ed235c" data-href="/HuaweiOrderManage/FindPOList/Warning">查看</a>
+                <td class="col-md-4" style="padding:0px;border-top:2px solid #fdae79">
+                    <table class="table table-hover">
+                        <tr style="height:60px;font-size:16px;background-color:#fff6f0;color:#fdae79;">
+                            <td class="col-md-6" style="padding-top:18px;padding-left:20px;">预警</td>
+                            <td class="col-md-6" style="padding-top:18px;padding-left:20px;"><span id="warningPO" class="POboardTotalnum">0</span></td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">新订单超三天未处理</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="expiredOrderQuantity" class="POboardnum" name="expiredOrderQuantity" href="javascript:void()" data-name="预警PO列表" data-id="0daf345b-8519-4a1d-acb5-a17406ed235c" data-href="/HuaweiOrderManage/FindPOList/Warning">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">预计两周内到货</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="arrivalOnWeekOrderQuantity" class="POboardnum" name="arrivalOnWeekOrderQuantity" href="javascript:void()" data-name="预警PO列表" data-id="2bcb1fef-78f4-4a44-a0b8-4a0355d78a7a" data-href="/HuaweiOrderManage/FindPOList/News">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">下单六个月未交货</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="nonDeliveryOrderQuantity" class="POboardnum" name="nonDeliveryOrderQuantity" href="javascript:void()" data-name="预警PO列表" data-id="d26d8152-3441-42fe-ac9e-d2c08201685d" data-href="/HuaweiOrderManage/FindPOList/Change">0</a>
+                            </td>
+                        </tr>
+                        <tr style="height:40px;">
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">过期订单</td>
+                            <td class="col-md-6" style="padding-top:10px;padding-left:20px;">
+                                <a id="overdueOrderQuantity" class="POboardnum" name="overdueOrderQuantity" href="javascript:void()" data-name="预警PO列表" data-id="0daf345b-8519-4a1d-acb5-a17406ed235c" data-href="/HuaweiOrderManage/FindPOList/Warning">0</a>
+                            </td>
+                        </tr>
+
+                    </table>
                 </td>
             </tr>
         </table>
