--- a/KingPlatform/Views/Login/Index.cshtml
+++ b/KingPlatform/Views/Login/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="logo">
                 <img src="~/Content/img/logo.png"/>
-                <h1>金信诺协同平台</h1>
+                <h1>金信诺KS协同平台</h1>
             </div>
             <form class="form">
                 <div class="row">
