修改页面样式,添加关闭订单页面

--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Cancel.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Cancel.cshtml
@@ -108,8 +108,8 @@
             <ul class="nav nav-pills">
                 <li class="first">华为待取消PO列表</li>
                 <li class="first">已选中<span id="choseNum">0</span>项</li>
-                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-pencil-square-o"></i>PO签返（接受）</a></li>
-                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-pencil-square-o"></i>PO签返（驳回）</a></li>
+                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-check"></i>PO签返（接受）</a></li>
+                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-reply"></i>PO签返（驳回）</a></li>
             </ul>
             <a href="javascript:;" class="close"></a>
         </div>
